--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ MarkupSafe==3.0.3
 numpy==2.4.1
 pandas==2.3.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 requests==2.32.5
 six==1.17.0
