enhances the dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-venv/
-__pycache__/
-.DS_Store
-*.pyc
+# 1. Security (Crucial)
 .env
+productivity.db
+
+# 2. Python System Files (Junk)
+__pycache__/
+*.pyc
+venv/
+
+# 3. Mac System Files (Junk)
+.DS_Store
